[gd_scene load_steps=3 format=3 uid="uid://c2qpmo4lwtiyt"]

[ext_resource type="Texture2D" uid="uid://dhpahtpythp8o" path="res://UITextures/Cards/nizz_no_doubt_genesis.png" id="1_6m8bs"]
[ext_resource type="Script" path="res://Components/MyProfile/card_collection_slot.gd" id="1_s5v58"]

[node name="CardCollectionSlot" type="Control"]
custom_minimum_size = Vector2(159.36, 200)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_s5v58")

[node name="CardIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("1_6m8bs")
expand_mode = 1

[node name="Panel" type="Panel" parent="CardIcon"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.3647
offset_right = -0.360001
offset_bottom = -1.36472
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="CardOwnedCount" type="Label" parent="CardIcon/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 12
text = "10 / 10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardCollectionButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[connection signal="pressed" from="CardCollectionButton" to="." method="_on_card_collection_button_pressed"]
